; ModuleID = '/home/carl/AnghaBench/tmux/extr_window.c_window_pane_reset_mode_all.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window.c_window_pane_reset_mode_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_pane = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @window_pane_reset_mode_all(%struct.window_pane* %0) #0 {
  %2 = alloca %struct.window_pane*, align 8
  store %struct.window_pane* %0, %struct.window_pane** %2, align 8
  br label %3

3:                                                ; preds = %9, %1
  %4 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %5 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %4, i32 0, i32 0
  %6 = call i32 @TAILQ_EMPTY(i32* %5)
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %11 = call i32 @window_pane_reset_mode(%struct.window_pane* %10)
  br label %3

12:                                               ; preds = %3
  ret void
}

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local i32 @window_pane_reset_mode(%struct.window_pane*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
